# numas

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  publish.sh
benches/: factory.rs  mathematic.rs  operator.rs  random-bench.rs  random.rs
src/: lib.rs  main.rs
src/array/: array.rs  factory.rs  mod.rs  operator.rs  shape.rs  slice.rs
src/factory/: fill.rs  mod.rs  numeric.rs  random.rs
src/linear_algebra/: mod.rs  product.rs
src/mathematic/: exponential.rs  hyperbolic.rs  logarithm.rs  miscellaneous.rs  mod.rs  reducer.rs  round.rs  trigonometric.rs  unit_type.rs
src/operator/: arithmetic.rs  mod.rs  relational.rs
src/shape/: mod.rs  relational.rs  shape.rs
