[package]
name = "numas"
version = "0.1.4"
authors = ["Lukáš Zahradník <LukasZahradnik96@seznam.cz>"]
description = "numas library is implementation of multidimensional array for efficient computing"
homepage = "https://numaslibrary.github.io/"
repository = "https://github.com/numaslibrary/numas"
readme = "./README.md"
keywords = ["numeric", "array", "ndarray", "multidimensional", "numpy"]
categories = ["data-structures", "science"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed"}
is-it-maintained-issue-resolution = { repository = "https://github.com/numaslibrary/numas" }
codecov = { repository = "https://github.com/numaslibrary/numas", branch = "master", service = "github" }

[dependencies]
rand = "0.6.5"

[lib]
crate-type = ["lib"]
